--- a/calculator/package.json
+++ b/calculator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calculator",
-  "homepage": "http://riceball1.github.io/calculator",
+  "homepage": "http://danafng.com/calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
